--- a/CollectionViews-XibCells/Views/CustomCollectionViewCell.xib
+++ b/CollectionViews-XibCells/Views/CustomCollectionViewCell.xib
@@ -10,8 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomCollectionViewCell" customModule="CollectionViews_XibCells" customModuleProvider="target">
             <connections>
-                <outlet property="collectionView" destination="CKh-Dc-kma" id="cnB-NF-3Vm"/>
                 <outlet property="commonView" destination="tRE-u0-163" id="CTb-GU-A7x"/>
+                <outlet property="myCollectionView" destination="CKh-Dc-kma" id="mEB-0T-tan"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -52,8 +52,8 @@
             </constraints>
             <size key="customSize" width="272" height="173"/>
             <connections>
-                <outlet property="collectionView" destination="CKh-Dc-kma" id="byh-ak-9B1"/>
                 <outlet property="commonView" destination="tRE-u0-163" id="2wY-0z-iHo"/>
+                <outlet property="myCollectionView" destination="CKh-Dc-kma" id="hV9-nB-swj"/>
             </connections>
             <point key="canvasLocation" x="-155" y="124"/>
         </collectionViewCell>
